// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Drawer Drawer 1`] = `
.emotion-0 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-1:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-1:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-1:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-1:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 19.25rem;
  background-color: white;
  overflow: hidden;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  min-height: 100%;
  z-index: 100;
  position: absolute;
  border-right: 0.0625rem solid #cfd7e5;
}

.emotion-5 {
  -webkit-transition: all 10.2s ease-in-out;
  -moz-transition: all 10.2s ease-in-out;
  -ms-transition: all 10.2s ease-in-out;
  -o-transition: all 10.2s ease-in-out;
  -webkit-transition: all 10.2s ease-in-out;
  transition: all 10.2s ease-in-out;
  width: 100%;
  background-color: white;
  height: 100%;
  padding: 1.5rem 0;
  box-sizing: border-box;
}

.emotion-5 .menu-item-text,
.emotion-5 .submenu-item-text {
  opacity: 1;
  width: 12.75rem;
  white-space: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
  color: #0f0f17;
  cursor: default;
  width: 100%;
  font-size: 1rem;
  font-weight: 400;
  padding: 0 1rem;
  background: transparent;
  border: 0 solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:hover {
  background-color: #f3f5f8;
}

.emotion-6:focus-visible {
  outline: #F814E1 auto 0.0625rem;
}

.emotion-7 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  opacity: 1;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-7 path {
  background-color: #444d5f;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #5f6c85;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-9 path {
  fill: #5f6c85;
}

.emotion-10 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 0.5rem;
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-12 {
  fill: #282e39;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-12 path {
  fill: #282e39;
}

.emotion-13 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-weight: initial;
}

.emotion-14 {
  -webkit-transition: opacity 0ms ease,-webkit-transform 0ms ease;
  transition: opacity 0ms ease,transform 0ms ease;
  opacity: 0;
  -webkit-transform: translateY(-0.625rem);
  -moz-transform: translateY(-0.625rem);
  -ms-transform: translateY(-0.625rem);
  transform: translateY(-0.625rem);
}

.emotion-15 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
  color: #0f0f17;
  cursor: default;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  box-sizing: border-box;
  font-size: 0.875rem;
  color: #0f0f17;
  margin: 0.25rem 0 0.25rem 0;
  padding-left: 2.4375rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:hover {
  background-color: #f3f5f8;
}

.emotion-15.active:hover {
  background-color: #b9cdfc!important;
}

.emotion-15.active {
  font-weight: 700;
  background-color: #d0defd!important;
  color: black;
}

.emotion-15.active path {
  fill: #175bf5!important;
}

.emotion-15:focus-visible {
  outline: #F814E1 auto 0.0625rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2rem;
  height: 2rem;
  margin-right: 0.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-18 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-18 path {
  fill: #5f6c85;
}

.emotion-69 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
  color: #0f0f17;
  cursor: default;
  width: 100%;
  font-size: 1rem;
  font-weight: 400;
  padding: 0 1rem;
  background: transparent;
  border: 0 solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-69:hover {
  background-color: #f3f5f8;
}

.emotion-69:focus-visible {
  outline: #F814E1 auto 0.0625rem;
}

.emotion-70 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  opacity: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-70 path {
  background-color: #444d5f;
}

.emotion-77 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 50px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f3f5f8;
  width: 100%;
}

.emotion-78 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-79 {
  font-weight: bold;
  margin: 5px;
}

.emotion-80 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  margin: 5px;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div>
      <div
        className="emotion-0"
      >
        <button
          className="emotion-1"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-2"
          >
            <span>
              Hide
               Drawer
            </span>
          </span>
        </button>
      </div>
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
          data-testid="sidebar"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="emotion-5"
          >
            <div
              data-testid="expand-collapse"
            >
              <button
                className="emotion-6"
                data-testid="/menu1"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
                <div
                  className="emotion-10"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-12"
                    />
                  </span>
                </div>
                <span
                  className="menu-item-text emotion-13"
                >
                  Long Menu Item Name
                </span>
              </button>
              <div
                className="emotion-14"
              >
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu1"
                  href="/submenu1"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu1
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu2"
                  href="/submenu2"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu2
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu3"
                  href="/submenu3"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu3
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu4"
                  href="/submenu4"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu4
                  </span>
                </a>
              </div>
            </div>
            <div
              data-testid="expand-collapse"
            >
              <button
                className="emotion-6"
                data-testid="/menu2"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
                <div
                  className="emotion-10"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-12"
                    />
                  </span>
                </div>
                <span
                  className="menu-item-text emotion-13"
                >
                  Menu2
                </span>
              </button>
              <div
                className="emotion-14"
              >
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu5"
                  href="/submenu5"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu5
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu6"
                  href="/submenu6"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu6
                  </span>
                </a>
              </div>
            </div>
            <div
              data-testid="expand-collapse"
            >
              <button
                className="emotion-6"
                data-testid="/menu3"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
                <div
                  className="emotion-10"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-12"
                    />
                  </span>
                </div>
                <span
                  className="menu-item-text emotion-13"
                >
                  Menu3
                </span>
              </button>
              <div
                className="emotion-14"
              >
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu7"
                  href="/submenu7"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu7
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu8"
                  href="/submenu8"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu8
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu9"
                  href="/submenu9"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu9
                  </span>
                </a>
              </div>
            </div>
            <a
              aria-current={null}
              className="emotion-69"
              data-testid="/menu4"
              href="/menu4"
              onClick={[Function]}
            >
              <div
                className="emotion-70"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </div>
              <div
                className="emotion-10"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </div>
              <span
                className="menu-item-text emotion-13"
              >
                Menu4
              </span>
            </a>
          </div>
        </div>
        <div
          className="emotion-77"
        >
          <div
            className="emotion-78"
          >
            <span
              className="emotion-79"
            >
              Click an option to navigate directly to Route
            </span>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu1"
              onClick={[Function]}
            >
              SubMenu1
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu2"
              onClick={[Function]}
            >
              SubMenu2
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu3"
              onClick={[Function]}
            >
              SubMenu3
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu4"
              onClick={[Function]}
            >
              SubMenu4
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu5"
              onClick={[Function]}
            >
              SubMenu5
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu6"
              onClick={[Function]}
            >
              SubMenu6
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu7"
              onClick={[Function]}
            >
              SubMenu7
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu8"
              onClick={[Function]}
            >
              SubMenu8
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu9"
              onClick={[Function]}
            >
              SubMenu9
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/menu4"
              onClick={[Function]}
            >
              Menu4
            </a>
          </div>
          <br />
          <br />
           Current Route:
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Drawer Drawer with custom component 1`] = `
.emotion-0 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-1:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-1:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-1:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-1:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 19.25rem;
  background-color: white;
  overflow: hidden;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  min-height: 100%;
  z-index: 100;
  position: absolute;
  border-right: 0.0625rem solid #cfd7e5;
}

.emotion-5 {
  -webkit-transition: all 10.2s ease-in-out;
  -moz-transition: all 10.2s ease-in-out;
  -ms-transition: all 10.2s ease-in-out;
  -o-transition: all 10.2s ease-in-out;
  -webkit-transition: all 10.2s ease-in-out;
  transition: all 10.2s ease-in-out;
  width: 100%;
  background-color: white;
  height: 100%;
  padding: 1.5rem 0;
  box-sizing: border-box;
}

.emotion-5 .menu-item-text,
.emotion-5 .submenu-item-text {
  opacity: 1;
  width: 12.75rem;
  white-space: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
  color: #0f0f17;
  cursor: default;
  width: 100%;
  font-size: 1rem;
  font-weight: 400;
  padding: 0 1rem;
  background: transparent;
  border: 0 solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:hover {
  background-color: #f3f5f8;
}

.emotion-6:focus-visible {
  outline: #F814E1 auto 0.0625rem;
}

.emotion-7 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  opacity: 1;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-7 path {
  background-color: #444d5f;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #5f6c85;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-9 path {
  fill: #5f6c85;
}

.emotion-10 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 0.5rem;
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-12 {
  fill: #282e39;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-12 path {
  fill: #282e39;
}

.emotion-13 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-weight: initial;
}

.emotion-14 {
  -webkit-transition: opacity 0ms ease,-webkit-transform 0ms ease;
  transition: opacity 0ms ease,transform 0ms ease;
  opacity: 0;
  -webkit-transform: translateY(-0.625rem);
  -moz-transform: translateY(-0.625rem);
  -ms-transform: translateY(-0.625rem);
  transform: translateY(-0.625rem);
}

.emotion-15 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
  color: #0f0f17;
  cursor: default;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  box-sizing: border-box;
  font-size: 0.875rem;
  color: #0f0f17;
  margin: 0.25rem 0 0.25rem 0;
  padding-left: 2.4375rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15:hover {
  background-color: #f3f5f8;
}

.emotion-15.active:hover {
  background-color: #b9cdfc!important;
}

.emotion-15.active {
  font-weight: 700;
  background-color: #d0defd!important;
  color: black;
}

.emotion-15.active path {
  fill: #175bf5!important;
}

.emotion-15:focus-visible {
  outline: #F814E1 auto 0.0625rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2rem;
  height: 2rem;
  margin-right: 0.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-18 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-18 path {
  fill: #5f6c85;
}

.emotion-69 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
  color: #0f0f17;
  cursor: default;
  width: 100%;
  font-size: 1rem;
  font-weight: 400;
  padding: 0 1rem;
  background: transparent;
  border: 0 solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-69:hover {
  background-color: #f3f5f8;
}

.emotion-69:focus-visible {
  outline: #F814E1 auto 0.0625rem;
}

.emotion-70 {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  opacity: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-70 path {
  background-color: #444d5f;
}

.emotion-77 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 50px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f3f5f8;
  width: 100%;
}

.emotion-78 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-79 {
  font-weight: bold;
  margin: 5px;
}

.emotion-80 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  margin: 5px;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div>
      <div
        className="emotion-0"
      >
        <button
          className="emotion-1"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-2"
          >
            <span>
              Hide
               Drawer
            </span>
          </span>
        </button>
      </div>
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
          data-testid="sidebar"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            style={
              Object {
                "background": "yellow",
                "padding": "20px",
              }
            }
          >
            here is a title
          </div>
          <div
            className="emotion-5"
          >
            <div
              data-testid="expand-collapse"
            >
              <button
                className="emotion-6"
                data-testid="/menu1"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
                <div
                  className="emotion-10"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-12"
                    />
                  </span>
                </div>
                <span
                  className="menu-item-text emotion-13"
                >
                  Long Menu Item Name
                </span>
              </button>
              <div
                className="emotion-14"
              >
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu1"
                  href="/submenu1"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu1
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu2"
                  href="/submenu2"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu2
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu3"
                  href="/submenu3"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu3
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu4"
                  href="/submenu4"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu4
                  </span>
                </a>
              </div>
            </div>
            <div
              data-testid="expand-collapse"
            >
              <button
                className="emotion-6"
                data-testid="/menu2"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
                <div
                  className="emotion-10"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-12"
                    />
                  </span>
                </div>
                <span
                  className="menu-item-text emotion-13"
                >
                  Menu2
                </span>
              </button>
              <div
                className="emotion-14"
              >
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu5"
                  href="/submenu5"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu5
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu6"
                  href="/submenu6"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu6
                  </span>
                </a>
              </div>
            </div>
            <div
              data-testid="expand-collapse"
            >
              <button
                className="emotion-6"
                data-testid="/menu3"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
                <div
                  className="emotion-10"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-12"
                    />
                  </span>
                </div>
                <span
                  className="menu-item-text emotion-13"
                >
                  Menu3
                </span>
              </button>
              <div
                className="emotion-14"
              >
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu7"
                  href="/submenu7"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu7
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu8"
                  href="/submenu8"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu8
                  </span>
                </a>
                <a
                  aria-current={null}
                  className="emotion-15"
                  data-testid="/submenu9"
                  href="/submenu9"
                  id="submenu-item-link"
                  onClick={[Function]}
                >
                  <div
                    className="emotion-16"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-18"
                      />
                    </span>
                  </div>
                  <span
                    className="submenu-item-text"
                  >
                    SubMenu9
                  </span>
                </a>
              </div>
            </div>
            <a
              aria-current={null}
              className="emotion-69"
              data-testid="/menu4"
              href="/menu4"
              onClick={[Function]}
            >
              <div
                className="emotion-70"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </div>
              <div
                className="emotion-10"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </div>
              <span
                className="menu-item-text emotion-13"
              >
                Menu4
              </span>
            </a>
          </div>
        </div>
        <div
          className="emotion-77"
        >
          <div
            className="emotion-78"
          >
            <span
              className="emotion-79"
            >
              Click an option to navigate directly to Route
            </span>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu1"
              onClick={[Function]}
            >
              SubMenu1
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu2"
              onClick={[Function]}
            >
              SubMenu2
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu3"
              onClick={[Function]}
            >
              SubMenu3
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu4"
              onClick={[Function]}
            >
              SubMenu4
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu5"
              onClick={[Function]}
            >
              SubMenu5
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu6"
              onClick={[Function]}
            >
              SubMenu6
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu7"
              onClick={[Function]}
            >
              SubMenu7
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu8"
              onClick={[Function]}
            >
              SubMenu8
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/submenu9"
              onClick={[Function]}
            >
              SubMenu9
            </a>
            <a
              aria-current={null}
              className="emotion-80"
              href="/menu4"
              onClick={[Function]}
            >
              Menu4
            </a>
          </div>
          <br />
          <br />
           Current Route:
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;
